<resources>
    <string name="app_name">Nankai GPA Calculator</string>
    <string name="about">About</string>
    <string name="version">Version </string>
    <string name="contact_us">Contact us </string>
    <string name="language">Language </string>
    <string name="calculate_style">Calculate style </string>
    <string name="font_size">Font size</string>
    <string name="dark_mode">Theme style</string>
    <string name="developers">Developers</string>
    <string name="calculate">Calculate GPA</string>
    <string name="settings">Settings</string>
    <string name="log_out">Logout</string>
    <string name="rate_us">Rate us</string>
    <string name="ok">Ok</string>
    <string name="send_to">Share to</string>
    <string name="enter_credit">Enter credit</string>
    <string name="enter_mark">Enter mark</string>
    <string name="result">Result:</string>
    <string name="enterTotal_Hourse_Before_This_semester">Total hours before this semester</string>
    <string name="gpa_before_this_semester">GPA before this semester</string>
    <string name="some_thing_wrong">Some thing went wrong!</string>
    <string name="your_semester_gpa">Your semester gpa is </string>
    <string name="change_to_dark">Change to dark mode</string>
    <string name="change_to_light">Change to light mode</string>
    <string name="calculate_cumulative_gpa">Calculate Cumulative GPA</string>
    <string name="your_cumulative_gpa">Your cumulative GPA </string>
    <string name="some_thing_missing">Something missing!</string>
    <string name="choose_num_of_course">Choose number of course: </string>
    <string name="num_course">Number of courses you have chosen is </string>
    <string name="app_dev">This app developed by international Nankai University students: \n- SAID Al SAIDI \n- MOHAMMED AL MAHI \n- AMMAR KHALID \n- HIDER HUSAM AHMED \n- MOHAMMED SAAD ALI</string>
    <string name="aboutTxt">This is Nankai university GPA calculator for international students to help them calculate their GPA, designed by students as part of their assignment. This app calculate the GPA according to below formula:\n
        - A (100 - 85)\n
        - B (75 - 84)\n
        - C ( 74 -60)\n
        - D ( below 60)\n
        There is another way to calculate GPA, you can choose it via the settings.\n
        The app still in development process, there will be updates from time to time.

    </string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="big">Big</string>
    <string name="bigger">Bigger</string>
    <string name="test_text">Test text</string>
    <string name="english">English</string>
    <string name="chinese">中文</string>
    <string name="us">US</string>
    <string name="global">Global</string>
    <string name="us_way">A = 4\n
A- = 3.7\n
B+ = 3.3\n
B = 3\n
B- = 2.7\n
C+ = 2.3\n
C = 2.0\n
C- = 1.7\n
D+ = 1.3\n
D = 1\n
D- = .7\n
F = 0</string>
    <string name="global_way">A = 4\n
B = 3.2\n
C = 2.8\n
D =2.4\n
E =2.0\n
</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_content">This application is designed to help students in Nankai university to calculate their GPA by providing for them simple application with easy features such as:\n
    - Calculate style.\n
    - Supports US and Global calculation style of GPA.\n
    - Supports English and Chinese language.\n
    The app designed by software engineering students in the Nankai University.\n
    The app does not collect any personal information or share them with third party.\n
    The app does not required any permission to access camera, real location GPS, storage data or change settings in the phone.\n
    The app designed by Alsaidisoft and his friends to help students calculate their GPA.\n
    You can contact us via email: saeed.alsaidi.developer@gmail.com</string>
</resources>