<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relative_layout_dialog"
        android:padding="5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/lin1"
        android:gravity="right"
        android:padding="0dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exit"
            android:src="@android:drawable/ic_delete"/>
    </RelativeLayout>




        <ImageView
            android:id="@+id/icon_gpa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:src="@mipmap/ic_action_calculate">

        </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/calculate_cumulative_gpa"
        android:textColor="@color/purple_200"
        android:textSize="18sp"

        android:layout_toRightOf="@+id/icon_gpa"
        android:id="@+id/calc_gpa"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterTotal_Hourse_Before_This_semester"
        android:inputType="number"
        android:layout_margin="5dp"
        android:layout_below="@+id/calc_gpa"
        android:id="@+id/total_horse"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gpa_before_this_semester"
        android:inputType="numberDecimal"
        android:layout_margin="5dp"
        android:layout_below="@+id/total_horse"
        android:id="@+id/total_gpa"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text=""
        android:gravity="center"
        android:textColor="@color/purple_200"
        android:textSize="18sp"

        android:layout_below="@+id/total_gpa"
        android:id="@+id/result1"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="7dp"
        android:textAlignment="center"
        android:layout_below="@+id/result1"
        android:text="@string/calculate_cumulative_gpa"
        android:id="@+id/calc_cgpa_btn"/>
    </RelativeLayout>

