<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainRelativeLayout"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl1"
            android:gravity="right"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/mark1"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:hint="@string/enter_mark"
                android:inputType="number|numberDecimal"
                android:textAlignment="center" />
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_credit"
                android:inputType="number"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/mark1"
                android:id="@+id/crid1"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl2"
            android:layout_below="@+id/rl1"
            android:gravity="right"
            android:layout_centerHorizontal="true">

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_mark"
                android:inputType="number|numberDecimal"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:id="@+id/mark2"/>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_credit"
                android:inputType="number"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/mark2"
                android:id="@+id/crid2"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl3"
            android:gravity="right"
            android:layout_below="@+id/rl2"
            android:layout_centerHorizontal="true">

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_mark"
                android:inputType="number|numberDecimal"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:id="@+id/mark3"/>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_credit"
                android:inputType="number"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/mark3"
                android:id="@+id/crid3"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl4"
            android:gravity="right"
            android:layout_below="@+id/rl3"
            android:layout_centerHorizontal="true">

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_mark"
                android:inputType="number|numberDecimal"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:id="@+id/mark4"/>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_credit"
                android:inputType="number"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/mark4"
                android:id="@+id/crid4"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl5"
            android:gravity="right"
            android:layout_below="@+id/rl4"
            android:layout_centerHorizontal="true">

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_mark"
                android:inputType="number|numberDecimal"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:id="@+id/mark5"/>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_credit"
                android:inputType="number"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/mark5"
                android:id="@+id/crid5"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl6"
            android:gravity="right"
            android:layout_below="@+id/rl5"
            android:layout_centerHorizontal="true">

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_mark"
                android:inputType="number|numberDecimal"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:id="@+id/mark6"/>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_credit"
                android:inputType="number"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/mark6"
                android:id="@+id/crid6"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl7"
            android:gravity="right"
            android:layout_below="@+id/rl6"
            android:layout_centerHorizontal="true">

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_mark"
                android:inputType="number|numberDecimal"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:id="@+id/mark7"/>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_credit"
                android:inputType="number"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/mark7"
                android:id="@+id/crid7"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl8"
            android:gravity="right"
            android:layout_below="@+id/rl7"
            android:layout_centerHorizontal="true">

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_mark"
                android:inputType="number|numberDecimal"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:id="@+id/mark8"/>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_credit"
                android:inputType="number"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/mark8"
                android:id="@+id/crid8"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl9"
            android:gravity="right"
            android:layout_below="@+id/rl8"
            android:layout_centerHorizontal="true">

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_mark"
                android:inputType="number|numberDecimal"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:id="@+id/mark9"/>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_credit"
                android:inputType="number"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/mark9"
                android:id="@+id/crid9"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl10"
            android:gravity="right"
            android:layout_below="@+id/rl9"
            android:layout_centerHorizontal="true">

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_mark"
                android:inputType="number|numberDecimal"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:id="@+id/mark10"/>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_credit"
                android:inputType="number"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/mark10"
                android:id="@+id/crid10"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl11"
            android:gravity="right"
            android:layout_below="@+id/rl10"
            android:layout_centerHorizontal="true">

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_mark"
                android:inputType="number|numberDecimal"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:id="@+id/mark11"/>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_credit"
                android:inputType="number"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/mark11"
                android:id="@+id/crid11"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl12"
            android:gravity="right"
            android:layout_below="@+id/rl11"
            android:layout_centerHorizontal="true">

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_mark"
                android:inputType="number|numberDecimal"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:id="@+id/mark12"/>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_credit"
                android:inputType="number"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/mark12"
                android:id="@+id/crid12"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl13"
            android:gravity="right"
            android:layout_below="@+id/rl12"
            android:layout_centerHorizontal="true">

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_mark"
                android:inputType="number|numberDecimal"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:id="@+id/mark13"/>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_credit"
                android:inputType="number"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/mark13"
                android:id="@+id/crid13"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl14"
            android:gravity="right"
            android:layout_below="@+id/rl13"
            android:layout_centerHorizontal="true">

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_mark"
                android:inputType="number|numberDecimal"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:id="@+id/mark14"/>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_credit"
                android:inputType="number"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/mark14"
                android:id="@+id/crid14"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl15"
            android:gravity="right"
            android:layout_below="@+id/rl14"
            android:layout_centerHorizontal="true">

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_mark"
                android:inputType="number|numberDecimal"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:id="@+id/mark15"/>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/enter_credit"
                android:inputType="number"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/mark15"
                android:id="@+id/crid15"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl15"
            android:gravity="center_horizontal">
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="7dp"
                android:text="@string/calculate"
                android:textAlignment="center"
                android:id="@+id/gpaCal"/>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>